--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MP_FinalProject"
         tools:targetApi="31">
         <activity
-            android:name=".EditProfile"
+            android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
             android:name=".CreatePostActivity"
@@ -37,7 +37,7 @@
             android:exported="false">
         </activity>
         <activity
-            android:name=".PostDetails"
+            android:name=".PostDetailsActivity"
             android:exported="false"
             android:label="@string/title_activity_post_details"
             android:theme="@style/Theme.MP_FinalProject" />
